--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 			<!-- BANNER IMAGE -->
 			<tr class="hero-banner">
 				<td class="hero-banner__cell">
-					<img class="hero-banner__image" src="/img/hero-page.gif" alt="HULU - Go Next Level" width="100%"/>
+					<img class="hero-banner__image" src="/hulu-letter//img/hero-page.gif" alt="HULU - Go Next Level" width="100%"/>
 				</td>
 			</tr>
 
